# python-services-devsecops

./: .gitignore  README.md  docker-compose.yml  report-guide.md
.github/workflows/: python-services.yaml
ansible/: docker-playbook.yaml
chatbot/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
cv_parsing/: Dockerfile  JD.txt  main.py  pyproject.toml  readme.md  requirements.txt
doc_processing/: Dockerfile  api_documentation.md  requirements.txt
doc_processing/src/: document_processor_flask_api.py
hr_attrition/: Dockerfile  requirements.txt
nginx/: nginx.conf
prophet_forecast/: Dockerfile  Readme.md  app.py  financial_dataset.csv  pyproject.toml  requirements.txt
scripts/: deploy.sh
tft_revenue_forecast/: Dockerfile  app.py  pyproject.toml  requirements.txt  tft-best.ckpt
