[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.0",
    "lightning==2.5.6",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pytorch-forecasting==1.5.0",
    "scikit-learn==1.7.2",
    "torch==2.3.0",
    "uvicorn[standard]==0.27.1",
]

# Force PyTorch CPU-only installation
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
